[tool.poetry]
name = "octopoes"
version = "0.1.0"
description = "KAT bitemporal knowledge graph engine"
authors = ["Your Name <you@example.com>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
requests = "^2.28.1"
fastapi = "^0.85.0"
pika = "^1.3.0"
kombu = "^5.2.4"
celery = "^5.2.7"
uvicorn = "^0.18.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
pylint = "^2.15.3"
black = "^22.10.0"
flake8 = "^5.0.4"
vulture = "^2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
